<resources>
    <string name="app_name">KONIRAapp</string>
    <string name="logo_desc">Logo</string>
    <string name="email">Email</string>
    <string name="logo">logo</string>
    <string name="title_login_page">Login</string>
    <string name="password">Password</string>
    <string name="login">Login\n</string>
    <string name="have_account">Have Account?, Rgister Here</string>
    <string name="btn_register">Register</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="artikel">Judul Artikel\n</string>
    <string name="lihat_semua">View All</string>
    <string name="gallery">Galeri\n</string>
    <string name="kamera">Camera\n</string>
    <string name="camera">Camera\n</string>
    <string name="upload">Upload\n</string>

    <string name="home">Home</string>
    <string name="profile">Profil</string>
    <string name="scan">Scan\n</string>
    <string name="map">Map</string>
    <string name="logout">Logout\n</string>
    <string name="switch_camera">Switch Camera</string>
    <string name="gambar_daun">Gambar Daun\n</string>
    <string name="register_here">Register Here</string>
    <string name="berita_main">News</string>
    <string name="pabrik">gambar pabrik</string>
    <string name="gambar_pabrik">Gambar Pabrik\n</string>
    <string name="nama_pabrik">Nama Pabrik\n</string>
    <string name="deskripsipabrik">Deskripsi Pabrik</string>
    <string name="lokasi_pabrik">Lokasi Pabrik</string>
    <string name="Find_distributor">Find a distributor</string>
    <string name="masuka_email">Email</string>
    <string name="masukan_password">Password</string>
    <string name="masukan_username">Username</string>
    <string name="konira">Konira</string>
    <string name="empty_image_warning">images must not be blank</string>
    <string name="image_classifier_failed">Image classifier failed to initialize. See eror logs for detail</string>
</resources>