<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.kamera.ActivityScan">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <ImageView
            android:id="@+id/previewImageView"
            android:layout_width="380dp"
            android:layout_height="200dp"
            android:layout_weight="1"
            android:scaleType="centerCrop"
            android:src="@drawable/add_pic"
            android:elevation="4dp"
            android:background="@color/choco"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp">

            <Button
                android:id="@+id/cameraButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/camera"
                android:backgroundTint="@color/choco_btn"
                android:layout_marginEnd="8dp"/>

            <Button
                android:id="@+id/galleryButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/gallery"
                android:backgroundTint="@color/choco_btn"
                android:layout_marginStart="8dp"/>

        </LinearLayout>

        <Button
            android:id="@+id/uploadButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/upload"
            android:backgroundTint="@color/choco_btn"
            android:layout_marginTop="16dp"/>

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:visibility="gone"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>