<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainColor"
    tools:context=".ui.beranda.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="200dp"
            android:layout_height="160dp"
            android:scaleType="centerCrop"
            android:src="@drawable/logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_berita"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="16dp"
            android:fontFamily="@font/montserrat_semibold"
            android:text="@string/berita_main"
            android:textColor="@color/choco"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="30dp"
            app:layout_constraintTop_toBottomOf="@+id/iv_logo" />

        <TextView
            android:id="@+id/tv_lihatSemua"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="16dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/montserrat_semibolditalic"
            android:gravity="center_vertical"
            android:text="@string/lihat_semua"
            android:textColor="@color/choco"
            app:layout_constraintBottom_toTopOf="@+id/frame"
            android:layout_marginEnd="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_logo" />

        <FrameLayout
            android:id="@+id/frame"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="16dp"
            app:layout_constraintEnd_toEndOf="@+id/tv_lihatSemua"
            app:layout_constraintStart_toStartOf="@+id/tv_berita"
            app:layout_constraintTop_toBottomOf="@+id/tv_berita">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_main"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/item_rowhomenews" />

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:outlineAmbientShadowColor="@color/choco"/>

        </FrameLayout>

        <TextView
            android:id="@+id/find_distributor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="16dp"
            android:fontFamily="@font/montserrat_extrabold"
            android:text="@string/Find_distributor"
            android:textColor="@color/choco"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="@+id/frame"
            app:layout_constraintStart_toStartOf="@+id/frame"
            app:layout_constraintTop_toBottomOf="@+id/frame" />

        <com.google.android.gms.maps.MapView
            android:id="@+id/mapView"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/find_distributor"
            app:layout_constraintStart_toStartOf="@+id/find_distributor"
            app:layout_constraintTop_toBottomOf="@+id/find_distributor" />



    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>